// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`the roster highlights the first line, moves with the arrows, selects with return 1`] = `
"  Tamago: roster                                       esc

  > Tamago · cat · adult · active
    Egg · egg

     ▄▀▀▄       ▄▀▀▄█▀█
     █████▄▄▄▄▄█████▀▀▀
  ▄▀███▀█████████▀███▀▄
  ████▀█▀███████▀█▀████  cat · common
  █████████▀▀▀█████████  adult · 9,166 xp
   ███████▀▀▀▀▀███████   hatched today
    ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀    chilling
     ▄▀███████████▀▄ █
    ████████████████ ▀
    █▀▀█       █▀▀█

  cheerful · bold shell

  energy      [#####-----] 5
  chatter     [#########-] 9
  sensitivity [#---------] 1
  patience    [######----] 6

  [#####---------------] 9,166 / 20,000 xp → elder"
`;

exports[`the roster highlights the first line, moves with the arrows, selects with return 2`] = `
"  Tamago: roster                                       esc

    Tamago · cat · adult · active
  > Egg · egg

         ▄█▀▀▄▄▄
       ▄▀███████▀▄
      ▄▀█████████▀▄
      ██▀█▀▀▀█▀█▀██      still an egg
      ███▀▀▀▀█▀▀▀██      egg · 0 xp
      ████████▀▀▀██      hatched today
      █████████████      chilling
      █████████████
       ███████████
        ▀▀▀▀▀▀▀▀▀

  cheerful

  stats show at hatching

  [--------------------] 0 / 200 xp → hatchling"
`;

exports[`the roster at five Careers: a known overflow, pinned here until it is decided 1`] = `
"  Tamago: roster                                       esc

  > Tamago 2 · cat · adult · active
    Tamago 3 · cat · adult
    Tamago 4 · cat · adult
    Tamago 5 · cat · adult


     █████▄▄▄▄▄█████▀▀▀
  ▄▀███▀█████████▀███▀▄
  ████▀█▀███████▀█▀████  cat · common
  █████████▀▀▀█████████  adult · 9,166 xp
   ███████▀▀▀▀▀███████   hatched today
    ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀    chilling
     ▄▀███████████▀▄ █
    ████████████████ ▀
    █▀▀█       █▀▀█

  cheerful · bold shell

  chatter     [#########-] 9
  sensitivity [#---------] 1
  patience    [######----] 6

  [#####---------------] 9,166 / 20,000 xp → elder"
`;

exports[`the roster reads in French 1`] = `
"  Tamago : roster                                      esc

  > Tamago · chat · adulte · actif

     ▄▀▀▄       ▄▀▀▄█▀█
     █████▄▄▄▄▄█████▀▀▀
  ▄▀███▀█████████▀███▀▄
  ████▀█▀███████▀█▀████  chat · commun
  █████████▀▀▀█████████  adulte · 9 166 xp
   ███████▀▀▀▀▀███████   éclos aujourd'hui
    ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀    tranquille
     ▄▀███████████▀▄ █
    ████████████████ ▀
    █▀▀█       █▀▀█

  enjoué · mécano audacieux

  énergie     [#####-----] 5
  bavardage   [#########-] 9
  sensibilité [#---------] 1
  patience    [######----] 6

  [#####---------------] 9 166 / 20 000 xp → ancien"
`;
